--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "iw",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
+    "start:server": "nodemon --exec ts-node --project tsconfig.node.json server.ts",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -22,7 +22,10 @@
     "@radix-ui/react-toggle-group": "^1.1.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "lucide-react": "^0.506.0",
+    "mongoose": "^8.15.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -36,6 +39,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.2",
     "@types/next": "^8.0.7",
     "@types/node": "^22.15.29",
     "@types/react": "^19.0.10",
@@ -47,9 +52,11 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "nodemon": "^3.1.10",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.3.2",
-    "typescript": "~5.7.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1",
     "vite-tsconfig-paths": "^5.1.4"
