--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,15 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      },
+    "target": "es2020",
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "strict": true
     
     
-    }
+    
   },
   "files": [],
   "references": [
