--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,5 +25,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "api"]                  // <-- เพิ่ม "api" ถ้าใช้ serverless function ที่นี่
+  "include": ["src", "api","*.ts"]                  // <-- เพิ่ม "api" ถ้าใช้ serverless function ที่นี่
 }
