--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "start:server": "nodemon --exec ts-node --project tsconfig.node.json server.ts",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "dev:server": "nodemon --exec ts-node --project tsconfig.node.json server.ts",
+  "start:server": "nodemon --exec ts-node --project tsconfig.node.json server.ts",
+  "build": "tsc -b && vite build",
+  "lint": "eslint .",
+  "preview": "vite preview"
+},
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-checkbox": "^1.3.1",
