--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-  "dev": "vite",
-  "dev:server": "nodemon --exec ts-node --project tsconfig.node.json server.ts",
-  "start:server": "nodemon --exec ts-node --project tsconfig.node.json server.ts",
-  "build": "tsc -b && vite build",
-  "lint": "eslint .",
-  "preview": "vite preview"
-},
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:frontend\"",
+    "dev:frontend": "vite",
+    "dev:server": "nodemon --exec ts-node --project tsconfig.node.json server.ts",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-checkbox": "^1.3.1",
@@ -49,6 +49,7 @@
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "autoprefixer": "^10.4.21",
+    "concurrently": "^9.1.2",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
