--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@radix-ui/react-tabs": "^1.1.9",
     "@radix-ui/react-toggle": "^1.1.8",
     "@radix-ui/react-toggle-group": "^1.1.9",
+    "@react-pdf/renderer": "^4.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "financial": "^0.2.4",
     "lucide-react": "^0.506.0",
     "mongoose": "^8.15.1",
     "react": "^19.0.0",
