--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "target": "es2020",
     "module": "commonjs",
     "esModuleInterop": true,
-    "strict": true 
+    "strict": true,
+    "lib": ["DOM", "DOM.Iterable", "ES2022", "ES2023"],
   },
   "files": [],
   "references": [
