--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@radix-ui/react-toggle": "^1.1.8",
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@react-pdf/renderer": "^4.3.0",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "financial": "^0.2.4",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.506.0",
     "mongoose": "^8.15.1",
     "react": "^19.0.0",
@@ -54,6 +56,7 @@
     "@types/node": "^22.15.29",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-pdf": "^6.2.0",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "autoprefixer": "^10.4.21",
