--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^5.1.0",
     "financial": "^0.2.4",
     "html2canvas": "^1.4.1",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.506.0",
     "mongoose": "^8.15.1",
     "react": "^19.0.0",
@@ -52,6 +53,7 @@
     "@eslint/js": "^9.22.0",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/next": "^8.0.7",
     "@types/node": "^22.15.29",
     "@types/react": "^19.0.10",
